# telemetry-in-midair-rs

./: .gitignore  IDEAS.md  ISSUES.md  PLAN.md  RADIO.example.toml  README.md  TODO.md
esp/: Cargo.toml  build.rs
proto/: Cargo.toml
proto/src/: ble.rs  lib.rs  link.rs  lora.rs  radiocfg.rs
tools/: esp_address.py  esp_upload.py  gen_ble_address.py  pixi.toml  wio_config.py  wio_fw_upload.py  wio_link.py
wio/: Cargo.toml  build.rs  memory-app.x  rust-toolchain.toml
wio/.cargo/: config.toml
wio/bootloader/: Cargo.toml  build.rs  memory.x
wio/bootloader/src/: main.rs
wio/src/: boot_state.rs  cfgstore.rs  cfgxfer.rs  esplink.rs  fwupdate.rs  gps.rs  io.rs  leds.rs  lib.rs  node.rs  platform.rs  radio.rs  sdcard.rs  sdlog.rs  watchdog.rs
