[package]
edition      = "2024"
name         = "esp32c6-gps"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32c6-gps"
path = "./src/bin/main.rs"

# Bench tool: checks over UART whether the WIO-E5 is alive (factory AT
# firmware at 9600 or wio-e5-gps link PING at 115200).
[[bin]]
name = "wio-probe"
path = "./src/bin/wio_probe.rs"

[dependencies]
# ~1.0: the matched esp-rtos 0.2 / esp-radio 0.17 pair expects esp-hal
# 1.0.x (1.1 breaks esp-phy / esp-rtos).
esp-hal = { version = "~1.0", features = ["esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = [] }
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.5.0"
heapless = "0.9"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
# UART0 is the WIO-E5 link, so console output must stay on the USB
# Serial/JTAG port (jtag-serial instead of the default auto detection).
esp-println = { version = "0.16.1", default-features = false, features = [
  "esp32c6",
  "jtag-serial",
  "critical-section",
  "colors",
] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "esp-alloc",
  "esp32c6",
  "unstable",
] }
# The bigger packet pool MTU lets a central negotiate a large ATT MTU for
# the bulk (config/firmware) transfer characteristic.
trouble-host = { version = "0.5.0", features = ["gatt", "default-packet-pool-mtu-251"] }

critical-section = "1.2.0"
portable-atomic  = "1"
static_cell      = "2.1.1"

# Shared BLE protocol + NMEA (same service as the ESP32-C3 beacon).
gps-proto = { path = "../../gps-proto" }
# Board link protocol, BLE extensions and radio config.
midair-proto = { path = "../proto" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
