[workspace]
members = [".", "bootloader"]

[package]
edition      = "2024"
name         = "wio-e5-gps"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "wio-e5-gps"
path = "./src/bin/main.rs"

[features]
default = []
debug = []

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["set-vtor"] }
stm32wlxx-hal = { version = "0.6", features = ["stm32wle5", "rt"] }
panic-halt = "1.0"
rtt-target = "0.6.2"
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick"] }
nb = "1"
# SPSC ring buffer: the USART2 (ESP link) RX interrupt fills it, the main
# loop drains it. Same version RTIC already pulls in.
heapless = "0.8"
# FAT filesystem so the SD card logs are readable on a phone/computer.
# Only the BlockDevice trait side is used (the SPI driver is in-repo),
# so the embedded-hal 1.0 mismatch with stm32wlxx-hal does not matter.
embedded-sdmmc = { version = "0.8", default-features = false }

midair-proto = { path = "../proto" }
gps-proto = { path = "../../gps-proto" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'thin'
opt-level        = 's'
overflow-checks  = false
